更新了工单模板

--- a/.github/ISSUE_TEMPLATE/💡🌱🌱🌱.md
+++ b/.github/ISSUE_TEMPLATE/💡🌱🌱🌱.md
@@ -2,7 +2,7 @@
 name: "\U0001F4A1\U0001F331\U0001F331\U0001F331"
 about: 你发现了新大陆！？
 title: "[求收录] \U0001F331"
-labels: enhancement
+labels: 改进
 assignees: ''
 
 ---
