--- a/.github/ISSUE_TEMPLATE/🔍🐞🐞🐞.md
+++ b/.github/ISSUE_TEMPLATE/🔍🐞🐞🐞.md
@@ -2,7 +2,7 @@
 name: "\U0001F50D\U0001F41E\U0001F41E\U0001F41E"
 about: 哪里出现了什么问题？
 title: "[错误] \U0001F41E "
-labels: bug
+labels: 错误
 assignees: ''
 
 ---
