--- a/列表.md
+++ b/列表.md
@@ -2,17 +2,39 @@
 
 ## 桶（Cask）
 
-|       桶名        |                                        软件官网                                         |                                       备注                                       | CI 自动更新 |
-| :---------------: | :-------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------: | :---------: |
-|  `alist-desktop`  |          [AList 官方桌面客户端](https://github.com/alist-org/desktop-release)           |                     ![b](./assets/b.svg)![2](./assets/2.svg)                     |     ✓      |
-|  `alist-helper`   | [Alist-Helper](https://github.com/Xmarmalade/alisthelper/blob/master/README_zh-Hans.md) |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-|     `chatgpt`     |   [ChatGPT 第三方客户端](https://github.com/lencx/ChatGPT/blob/main/README-ZH_CN.md)    |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-| `clash-nyanpasu`  |              [Clash-Nyanpasu](https://github.com/keiko233/clash-nyanpasu)               |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-| `clash-verge-rev` |              [Clash-Verge-Rev](https://github.com/wonfen/clash-verge-rev)               |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-|   `clash-verge`   |            [Clash-Verge （已归档）](https://github.com/zzzgydi/clash-verge)             |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-|     `e-study`     |                      [知网研学（原 E-Study）](https://e-study.com)                      |           ![b](./assets/b.svg)![1](./assets/1.svg)![3](./assets/3.svg)           |     ✓      |
-|     `i4tools`     |                              [爱思助手](https://www.i4.cn)                              |                     ![b](./assets/b.svg)![1](./assets/1.svg)                     |     ✓      |
-|    `lingquan`     |                              [零泉](https://lingquan.cool)                              |           ![b](./assets/b.svg)![1](./assets/1.svg)![3](./assets/3.svg)           |     ✓      |
-|    `linkease`     |                           [易有云](https://app.linkease.com)                            |           ![b](./assets/b.svg)![1](./assets/1.svg)![3](./assets/3.svg)           |     ✓      |
-|     `tts-vue`     |                     [TTS-Vue](https://tts-doc.loker.vip/home.html)                      |                     ![a](./assets/a.svg)![1](./assets/1.svg)                     |     ✓      |
-|    `yank-note`    |                        [Yank-Note](https://yank-note.com/zh-CN)                         | ![a](./assets/a.svg)![1](./assets/1.svg)![2](./assets/2.svg)![3](./assets/3.svg) |     ✓      |
+|       桶名        |                                        软件官网                                         |                                   备注                                   | CI  |
+| :---------------: | :-------------------------------------------------------------------------------------: | :----------------------------------------------------------------------: | :-: |
+|  `alist-desktop`  |                [AList 官方桌面客户端](https://mbd.pub/o/bread/ZJaTl5xy/)                |                   ![b](assets/b.svg)![2](assets/2.svg)                   | ✓  |
+|  `alist-helper`   | [Alist-Helper](https://github.com/Xmarmalade/alisthelper/blob/master/README_zh-Hans.md) |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+| `app-cleaner-cn`  |       [App Cleaner 中文版](https://nektony.com/zh-hans/mac-app-cleaner/download)        |          ![b](assets/b.svg)![2](assets/2.svg)![3](assets/3.svg)          | ✓  |
+|   `basictex-cn`   |              [BasicTeX 镜像](https://www.tug.org/mactex/morepackages.html)              |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|   `blender-cn`    |                         [Blender 镜像](https://www.blender.org)                         |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+| `clash-nyanpasu`  |              [Clash-Nyanpasu](https://github.com/keiko233/clash-nyanpasu)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+| `clash-verge-rev` |              [Clash-Verge-Rev](https://github.com/wonfen/clash-verge-rev)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|   `clash-verge`   |            [Clash-Verge （已归档）](https://github.com/zzzgydi/clash-verge)             |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `copybook`     |                  [字帖生成器](https://github.com/xxNull-lsk/Copybook)                   |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `e-study`     |                      [知网研学（原 E-Study）](https://e-study.com)                      |          ![b](assets/b.svg)![1](assets/1.svg)![3](assets/3.svg)          | ✓  |
+|    `eshelper`     |                  [西语助手](https://www.eudic.net/v4/es/app/eshelper)                   |          ![b](assets/b.svg)![1](assets/1.svg)![2](assets/2.svg)          | ✓  |
+|   `freecad-cn`    |              [FreeCAD 镜像](https://www.freecad.org/index.php?lang=zh_CN)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `gimp-cn`     |                            [GIMP 镜像](https://www.gimp.org)                            |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `i4tools`     |                              [爱思助手](https://www.i4.cn)                              |                   ![b](assets/b.svg)![1](assets/1.svg)                   | ✓  |
+|     `iina-cn`     |                              [IINA 镜像](https://iina.io)                               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|   `inkscape-cn`   |            [Inkscape 镜像](https://inkscape.org/zh-hans/?switchlang=zh-hans)            |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `julia-cn`     |                           [Julia 镜像](https://julialang.org)                           |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `kicad-cn`     |                             [Kicad 镜像](https://kicad.org)                             |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+| `libreoffice-cn`  |                    [LibreOffice 镜像](https://zh-cn.libreoffice.org)                    |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `lingquan`     |                              [零泉](https://lingquan.cool)                              |          ![b](assets/b.svg)![1](assets/1.svg)![3](assets/3.svg)          | ✓  |
+|    `linkease`     |                           [易有云](https://app.linkease.com)                            |          ![b](assets/b.svg)![1](assets/1.svg)![3](assets/3.svg)          | ✓  |
+|     `lyx-cn`      |                             [Lyx 镜像](https://www.lyx.org)                             |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|  `mambaforge-cn`  |               [Mambaforge 镜像](https://github.com/conda-forge/miniforge)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|  `miniforge-cn`   |               [Miniforge 镜像](https://github.com/conda-forge/miniforge)                |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `obs-cn`      |                     [OBS Studio 镜像](https://obsproject.com/zh-cn)                     |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|  `qt-creator-cn`  |                     [Qt Creator 镜像](https://www.qt.io/developers)                     |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|  `texstudio-cn`   |                         [TeXStudio 镜像](https://texstudio.org)                         |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `ting-en`     |               [每日英语听力](http://www.francochinois.com/v4/en/app/ting)               |          ![b](assets/b.svg)![2](assets/2.svg)![3](assets/3.svg)          | ✓  |
+|     `ting-es`     |               [每日西语听力](http://www.francochinois.com/v4/es/app/ting)               |          ![b](assets/b.svg)![2](assets/2.svg)![3](assets/3.svg)          | ✓  |
+|     `ting-fr`     |               [每日法语听力](http://www.francochinois.com/v4/fr/app/ting)               |          ![b](assets/b.svg)![2](assets/2.svg)![3](assets/3.svg)          | ✓  |
+|     `tts-vue`     |                     [TTS-Vue](https://tts-doc.loker.vip/home.html)                      |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `vlc-cn`      |                        [VLC 镜像](https://www.videolan.org/vlc)                         |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|   `vscodium-cn`   |                  [VSCodium 镜像](https://github.com/VSCodium/vscodium)                  |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `yank-note`    |                        [Yank-Note](https://yank-note.com/zh-CN)                         | ![a](assets/a.svg)![1](assets/1.svg)![2](assets/2.svg)![3](assets/3.svg) | ✓  |
