更新了软件列表

--- a/列表.md
+++ b/列表.md
@@ -1,6 +1,6 @@
 # 🀄️ 面向国人
 
-## 桶（Cask）
+## 图形化应用（Cask）
 
 |       桶名        |                                        软件官网                                         |                                   备注                                   | CI  |
 | :---------------: | :-------------------------------------------------------------------------------------: | :----------------------------------------------------------------------: | :-: |
@@ -14,9 +14,11 @@
 |   `clash-verge`   |            [Clash-Verge （已归档）](https://github.com/zzzgydi/clash-verge)             |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |    `copybook`     |                  [字帖生成器](https://github.com/xxNull-lsk/Copybook)                   |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |     `e-study`     |                      [知网研学（原 E-Study）](https://e-study.com)                      |          ![b](assets/b.svg)![1](assets/1.svg)![3](assets/3.svg)          | ✓  |
+|   `easy-to-tv`    |                 [Easy To TV](https://github.com/duolabmeng6/easy_to_tv)                 |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |    `eshelper`     |                  [西语助手](https://www.eudic.net/v4/es/app/eshelper)                   |          ![b](assets/b.svg)![1](assets/1.svg)![2](assets/2.svg)          | ✓  |
 |   `freecad-cn`    |              [FreeCAD 镜像](https://www.freecad.org/index.php?lang=zh_CN)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |     `gimp-cn`     |                            [GIMP 镜像](https://www.gimp.org)                            |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|     `gopeed`      |                              [Gopeed](https://gopeed.com/)                              |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |     `i4tools`     |                              [爱思助手](https://www.i4.cn)                              |                   ![b](assets/b.svg)![1](assets/1.svg)                   | ✓  |
 |     `iina-cn`     |                              [IINA 镜像](https://iina.io)                               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |   `inkscape-cn`   |            [Inkscape 镜像](https://inkscape.org/zh-hans/?switchlang=zh-hans)            |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
@@ -27,6 +29,7 @@
 |    `linkease`     |                           [易有云](https://app.linkease.com)                            |          ![b](assets/b.svg)![1](assets/1.svg)![3](assets/3.svg)          | ✓  |
 |     `lyx-cn`      |                             [Lyx 镜像](https://www.lyx.org)                             |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |  `mambaforge-cn`  |               [Mambaforge 镜像](https://github.com/conda-forge/miniforge)               |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
+|    `messauto`     |                     [MessAuto](https://github.com/LeeeSe/MessAuto)                      |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |  `miniforge-cn`   |               [Miniforge 镜像](https://github.com/conda-forge/miniforge)                |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |     `obs-cn`      |                     [OBS Studio 镜像](https://obsproject.com/zh-cn)                     |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |  `qt-creator-cn`  |                     [Qt Creator 镜像](https://www.qt.io/developers)                     |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
@@ -38,3 +41,12 @@
 |     `vlc-cn`      |                        [VLC 镜像](https://www.videolan.org/vlc)                         |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |   `vscodium-cn`   |                  [VSCodium 镜像](https://github.com/VSCodium/vscodium)                  |                   ![a](assets/a.svg)![1](assets/1.svg)                   | ✓  |
 |    `yank-note`    |                        [Yank-Note](https://yank-note.com/zh-CN)                         | ![a](assets/a.svg)![1](assets/1.svg)![2](assets/2.svg)![3](assets/3.svg) | ✓  |
+
+## 命令行应用（Formulae）
+
+|   公式名    |                     软件官网                      |                 备注                 | CI  |
+| :---------: | :-----------------------------------------------: | :----------------------------------: | :-: |
+| `alist-cli` |         [AList](https://alist.nn.ci/zh/)          | ![a](assets/a.svg)![1](assets/1.svg) | ✓  |
+|  `bbdown`   |    [BBDOWN](https://github.com/nilaoda/BBDown)    | ![a](assets/a.svg)![1](assets/1.svg) | ✓  |
+| `music-dl`  | [Music DL](https://github.com/guanguans/music-dl) | ![a](assets/a.svg)![1](assets/1.svg) | ✓  |
+|   `shurl`   |    [ShURL](https://github.com/Mrered/yourlsh)     | ![a](assets/a.svg)![1](assets/1.svg) | ✓  |
